--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/flight-app.css">
 
     {{content-for "head-footer"}}
+
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
   </head>
   <body>
     {{content-for "body"}}
